# ACF

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
examples/: client.py  curl_examples.md
src/agent/: harness.c  harness.h  mcts.c  mcts.h  memory.c  memory.h  router.c  router.h  tools.c  tools.h
src/core/: attention.c  attention.h  gpu.c  gpu.h  moe.c  moe.h  rope.c  rope.h  tensor.c  tensor.h
src/main/: cli.c  server.c
src/model/: checkpoint.c  checkpoint.h  config.c  config.h  external.c  external.h  interface.c  interface.h  transformer.c  transformer.h  vocab.c  vocab.h
src/runtime/: config.c  config.h  http.c  http.h  log.c  log.h
src/safety/: approval.c  approval.h  guardrails.c  guardrails.h  loop_detector.c  loop_detector.h
src/tests/: test_main.c
src/tools/: command_tools.c  command_tools.h  file_tools.c  file_tools.h
src/train/: loop.c  loop.h  loss.c  loss.h
